[package]
name = "hydra-core"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
heapless = { git = "https://github.com/mistermuki/heapless.git", branch = "main", features = ['portable-atomic']}
