[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

[dependencies]
hydra-core = { version = "0.1", path = "../hydra-core" }
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
heapless = { git = "https://github.com/mistermuki/heapless.git", branch = "main" } 

[dependencies.stm32f4xx-hal]
version = "0.18.0"
features = ["stm32f446"]
